[gd_scene load_steps=3 format=3 uid="uid://baeh41nsujt3d"]

[ext_resource type="Script" path="res://scripts/time_out.gd" id="1_ww1dv"]
[ext_resource type="LabelSettings" uid="uid://cc4luhxpmp6qc" path="res://themes/my_label_settings.tres" id="2_qddaw"]

[node name="time_out" type="Node2D"]
script = ExtResource("1_ww1dv")
starve_time = 2

[node name="Timer" type="Timer" parent="."]

[node name="canvas" type="CanvasLayer" parent="."]

[node name="label_starve" type="HBoxContainer" parent="canvas"]
offset_left = 26.0
offset_top = 35.0
offset_right = 338.0
offset_bottom = 80.0

[node name="label_text" type="Label" parent="canvas/label_starve"]
layout_mode = 2
text = "Time until you stave: "
label_settings = ExtResource("2_qddaw")

[node name="label_starve_time" type="Label" parent="canvas/label_starve"]
layout_mode = 2
label_settings = ExtResource("2_qddaw")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
